--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,11 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://mbanji.test
 
+
+FILESYSTEM_DRIVER=public
+FILESYSTEM_DISK=public
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
